{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "EarthPlayerDefault",
            "id": "966d5caa-72aa-4065-bd25-131c7c92cb41",
            "actions": [
                {
                    "name": "EarthWalk",
                    "type": "Value",
                    "id": "43db4cfc-7821-4a25-98e3-5b4088b2bae9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PickTree",
                    "type": "Button",
                    "id": "495a34ab-3f11-4936-b56e-af29a9bccb07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PickGrass",
                    "type": "Button",
                    "id": "b9e78fa6-71d3-466d-bd61-ae801e14870c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickFlower",
                    "type": "Button",
                    "id": "5d3b6a75-ebc5-4669-b5ff-271a74081743",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Remove Building",
                    "type": "Button",
                    "id": "514d0af8-d2f9-4fd1-9f44-2409bf99d06b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "a01b538b-153a-45fc-8c9e-8aae773c39d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Debug Tileflip",
                    "type": "Button",
                    "id": "7b88c43f-dd52-49f5-b524-0eb0d63f124c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "811510da-74ec-48dd-b739-5ba28b806dbf",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PickTree",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fbe9e24c-63fc-46bc-923a-e4b3daa1c9ee",
                    "path": "<Keyboard>/j",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PickTree",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9d638ee-8c65-47ee-b44b-6a86993f259a",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PickGrass",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9de986a9-5537-44dc-bdd5-ad17691ded38",
                    "path": "<Keyboard>/i",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PickGrass",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db31b04e-9491-4154-a099-82a2f8533792",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PickFlower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "819a3489-f125-4f9d-b03a-212eb3fefb7b",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickFlower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fda73281-8b58-4c1e-b653-3a8799fa97fd",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Remove Building",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b83cc183-82f3-464e-92e6-91577a02b239",
                    "path": "<Keyboard>/k",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Remove Building",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Controller",
                    "id": "aa1559d0-f32b-4667-9710-717974944141",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "StickDeadzone(min=0.2,max=1)",
                    "groups": "",
                    "action": "EarthWalk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f82b9738-ef29-4a13-98da-c536560ccbae",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EarthWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "aae35a44-e8c2-4f5d-9826-54b674f81a4d",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EarthWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ea58e246-29ce-4712-b0b1-4d0285e9e343",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EarthWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bb29ec5e-2264-475a-b254-30867cf1943f",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EarthWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "9640d80c-cdbe-4cfa-af27-699424941762",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EarthWalk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c5b6b3b0-e28d-4b09-b687-6a04f4479b4e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EarthWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5583e7e6-b8f4-4782-8ec5-0a40d651f849",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EarthWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e26fdfd1-924c-4ed0-9067-6cfd96b4abed",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EarthWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6a880111-8b2f-49f9-8563-ade3df2d9fb9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EarthWalk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "30582203-2784-484e-a200-e74f58a21e92",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f74824a8-a3ac-43ab-b042-5ae0c2631b16",
                    "path": "<Keyboard>/p",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fddf9087-6640-4efc-8d88-3cd3b5f639f5",
                    "path": "<Keyboard>/m",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Debug Tileflip",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlantIsSelected",
            "id": "bcc7bf38-e7f8-48eb-8d1b-58fd81b0eff0",
            "actions": [
                {
                    "name": "Plant plant",
                    "type": "Button",
                    "id": "9491d659-6adc-47b3-9a57-a00f6d07d1bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cancel planting",
                    "type": "Button",
                    "id": "fb33cbf5-e211-45bc-af25-fa98fed3c34b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EarthWalk",
                    "type": "Value",
                    "id": "f135b41f-ef8f-4405-a125-3b506d4c8835",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Cursor Move",
                    "type": "Value",
                    "id": "4d61e0a9-39e3-4fef-a2b0-5a829350c262",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "01c1f3cd-ffcc-4b6a-bef0-c6b6d6646149",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Plant plant",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f0a3964-fbde-44be-b691-60e18e3ce6df",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Plant plant",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c777e4d2-f813-469c-9feb-9f11070ae7a8",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel planting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc566b5a-0681-41bf-b55e-61a009eed32d",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cancel planting",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "81770430-cad4-4575-82bc-9a65fc9e432b",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EarthWalk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e5a0abd-321d-48c8-8082-951276b2f4d1",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ac3baf0-6ffa-4f19-9b7e-bc90895b03b4",
                    "path": "<VirtualMouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ebd3025-3762-43e5-a6e5-740d068858bb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Cursor Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}